# Ecosystem

./: .gitignore  CMakeLists.txt  config.csv  data.csv  data_template.csv
src/: Antibody.cpp  Antibody.h  BodyCell.cpp  BodyCell.h  CellMath.cpp  CellMath.h  MacroCell.cpp  MacroCell.h  Macrophage.cpp  Macrophage.h  NeutroCell.cpp  NeutroCell.h  Neutrophil.cpp  Neutrophil.h  Virus.cpp  Virus.h  cell.cpp  cell.h  data.csv  globalFunc.cpp  globalFunc.h  main.cpp  patogenCell.cpp  patogenCell.h
src/core/: assets.cpp  assets.h  controller.cpp  controller.h  field.cpp  field.h  gameMenu.cpp  gameMenu.h  temperature.cpp  temperature.h  windowRender.cpp  windowRender.h
src/objects/: Antibody.cpp  Antibody.h  antibody.cpp  antibody.h  bCell.cpp  bCell.h  bodyCell.cpp  bodyCell.h  cell.cpp  cell.h  gameMenu.cpp  hunterCell.cpp  hunterCell.h  macroCell.cpp  macroCell.h  neutroCell.cpp  neutroCell.h  pathogenCell.cpp  pathogenCell.h  plasmaCell.cpp  plasmaCell.h  temperature.cpp  temperature.h
src/textures/: animAntibody.cpp  animBCell.cpp  animBody.cpp  animBrain.cpp  animMacro.cpp  animNeutro.cpp  animPathogen.cpp  animPlasma.cpp  animations.cpp  animations.h  antibody.cpp  antibody.h  brainCell.cpp  brainCell.h  cell.cpp  cell.h  cellTexture.cpp  cellTexture.h  cellTextures.h  macrophage.cpp  macrophage.h  neutrophil.cpp  neutrophil.h  pathogen.cpp  pathogen.h  plasma.cpp  plasma.h  primaryCell.cpp  primaryCell.h
src/utils/: brain.cpp  brain.h  cellTypes.h  cells.h  drawing.cpp  drawing.h  freeMemory.h  initialization.cpp  initialization.h  settings.h  utils.h
